Apache Cayenne Release Notes
============================

For the latest information visit project web site: 
http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.0.1
Date:
----------------------------------

Bug Fixes:

CAY-2320 Modeler: Limit input into numeric fields to 10 digits
CAY-2449 Modeler: Needless scrollbar in Generate DB Schema result menu
CAY-2450 Modeler: Impossible to update Attribute title after syncing ObjEntity
CAY-2451 Modeler: ObjEntity "Edit" button doesn't open editor for Relationship
CAY-2454 Modeler: Unable to read validation message if it's truncated
CAY-2459 Modeler: DataMap Paste function is not working
CAY-2462 Modeler: Clipboard holds old content after application was reloaded
CAY-2464 ClassCastException when returning PRUNED_NODE in expression transformer
CAY-2470 Can't bind SQLExec parameters in a loop
CAY-2472 Clear cached replacement query on mutation in all indirect queries

----------------------------------
Release: 4.0
Date: August 06, 2018
----------------------------------

Bug Fixes:

CAY-2418 Modeler: unable to edit entity selected via Search
CAY-2427 Modeler: Undo throws exception
CAY-2430 Modeler: Redo throws NPE
CAY-2431 Cayenne JDK 11 compatibility
CAY-2435 cdbimport: procedure parameters are not imported
CAY-2436 NPE in CayenneRuntimeException constructor
CAY-2442 Broken EventBridge providers implementations
CAY-2444 Change URI from http:// to https:// in xsi:schemaLocation
CAY-2445 Oracle: Problem with ExpressionFactory.notInExp()

----------------------------------
Release: 4.0.RC1
Date: April 25, 2018
----------------------------------

Changes/New Features:

CAY-2414 Modeler: new icon design

Bug Fixes:

CAY-2253 Cayenne JDK9 compatibility
CAY-2361 PostgreSQL DbGenerator issues
CAY-2364 Wrong logging in SQLTemplate